<resources>
    <string name="app_name">VagoTchê</string>

    <!--Facebook -->
    <string name="facebook_app_id">187171295121507</string>
    <string name="fb_login_protocol_scheme">fb187171295121507</string>
    <string name="title_activity_main2">MenuActivity</string>

    <!--Google -->
    <string name="google_maps_key">AIzaSyA4T_jVEZvNG2wNiARtWjblo8po7UvvCl0</string>

    <!--Main -->
    <string name="CPF">CPF: Apenas números</string>
    <string name="Senha">Senha</string>
    <string name="Entrar">Entrar</string>

    <!--App_bar_Menu -->
    <string name="Créditos">Créditos</string>
    <string name="CadastroVeículo">Cadastro de Veículo</string>
    <string name="ConfiguracaoAlertas">Configuração de Alertas</string>
    <string name="ZonaAzul">Zona Azul</string>
    <string name="Navegar">Navegar</string>

    <!-- Menu -->
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Meus Dados -->
    <string name="MeuNome">Nome</string>
    <string name="MeuCPF">CPF</string>
    <string name="MeuEmail">Email</string>
    <string name="DataCriacao">Registrado no Sistema</string>

    <!-- Creditos -->
    <string name="title_activity_creditos">VagoCred</string>
    <string name="CredVago">Selecione o valor do crédito a ser adquirido para o seu credVAGO</string>
    <string name="ComprarCreditos">Comprar Créditos</string>
    <string name="CréditosUsados">Créditos Usados</string>
    <string name="Histórico">Histórico</string>
    <string name="Saldo">credVAGO</string>
    <string name="LimparCreditos">Limpar</string>

    <!-- Zona Azul -->
    <string name="title_activity_zona_azul">Pagamento Zona Azul</string>
    <string name="PlacaVeículo">Placa do Veículo</string>
    <string name="Cidade">Cidade</string>
    <string name="Parquímetro">Parquímetro/Setor</string>
    <string name="VagasTotais">Vagas Totais</string>
    <string name="VagasDisponíveis">Vagas Disponíveis</string>
    <string name="HorarioFuncionamento">Horário de Funcionamento da Cidade/Vaga</string>
    <string name="SelecionarTempo">Selecione o valor/tempo</string>

    <!-- Alertas -->

    <string name="Titulo">Configuração de Alertas</string>
    <string name="Subtitulo">Envio de notificações pelo celular</string>
    <string name="Aviso1">Permitir envio de mensagens quando houver um deslocamento indevido do meu veículo na vaga</string>
    <string name="Aviso2">Permitir envio de mensagens ao comprar créditos</string>
    <string name="Aviso3">Permitir envio de mensagens ao utilizar meus créditos</string>
    <string name="Aviso4">Permitir envio de mensagens quando estiver próximo do tempo limite de retirar meu carro da vaga</string>

    <!-- Cadastro -->
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="Nome">Nome</string>

    <!-- Cadastro Veículo -->
    <string name="title_activity_cadastro_veiculo">Cadastro de Veículo</string>
    <string name="Modelo">Modelo</string>
    <string name="Marca1">Marca/Modelo</string>
    <string name="Placa1">Placa</string>
    <string name="Ano">Ano</string>
    <string name="Cor">Cor</string>

    <!-- Maps -->
    <string name="title_activity_maps">Map</string>
    <string-array name="names">
        <item>Filtrar vagas por...</item>
        <item>Normal</item>
        <item>DFísico</item>
        <item>Idoso</item>
    </string-array>

    <string name="VagasTotaisMaps">Total de Vagas</string>
    <string name="VagasDisponíveisMaps">Vagas Disponíveis</string>


    <!-- Bluetooth -->

        <string name="ble_not_supported">BLE is not supported</string>
        <string name="label_data">Data:</string>
        <string name="label_device_address">Device address:</string>
        <string name="label_state">State:</string>
        <string name="no_data">No data</string>
        <string name="connected">Connected</string>
        <string name="disconnected">Disconnected</string>
        <string name="title_devices">BLE Device Scan</string>
        <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

        <string name="unknown_device">Unknown device</string>
        <string name="unknown_characteristic">Unknown characteristic</string>
        <string name="unknown_service">Unknown service</string>

        <!-- Menu items -->
        <string name="menu_connect">Connect</string>
        <string name="menu_disconnect">Disconnect</string>
        <string name="menu_scan">Scan</string>
        <string name="menu_stop">Stop</string>
        <string name="is_serial">Serial Present:</string>
        <string-array name="roygbiv">
            <item >Red</item>
            <item >Green</item>
            <item >Blue</item>
        </string-array>
        <string name="button">Send</string>
        <string name="red_slide">Red</string>
        <string name="blue_slide">Blue</string>
        <string name="green_slide">Green</string>

</resources>
