<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:weightSum="1">

    <AutoCompleteTextView
        android:id="@+id/ACviewModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Modelo" />

    <AutoCompleteTextView
        android:id="@+id/ACviewMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Marca" />

    <EditText
        android:id="@+id/editPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Placa1" />

    <TextView
        android:id="@+id/viewAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Ano" />

    <CalendarView
        android:id="@+id/editAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        />

</LinearLayout>
